# rust-rest-api-boilerplate

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yaml
migration/: Cargo.toml
migration/src/: lib.rs  m20250223_000001_create_profiles_table.rs  main.rs
src/: config.rs  db.rs  errors.rs  main.rs
src/extractors/: auth.rs  validated_json.rs
src/models/: profile.rs
src/routes/: auth.rs  mod.rs  user.rs
src/services/: user.rs
